Adjusted css and classes to fix side view on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,7 +33,7 @@
 .wrapper-container{
     margin: auto auto auto auto;
     align-items: center;
-    min-width: 350px;
+    min-width: 90vw;
 }
 
 /* media query for smaller screens, such as mobile phones */
