--- a/src/styles/honeycomb.scss
+++ b/src/styles/honeycomb.scss
@@ -26,7 +26,7 @@ body {
     justify-content: center;
     align-items: center;
     max-width: $honeycomb-max-width;
-    min-width:300px;
+    min-width:10px;
     padding: 0;
     transform: translateY(#{$hexagon-height/4});
 
