--- a/src/styles/introduction-font.css
+++ b/src/styles/introduction-font.css
@@ -10,7 +10,7 @@
 	}
 	@media (max-width: 1000px) {
 		p {
-			font-size: 16px;
+			font-size: 14px;
 			text-align: justify;
 			margin: 10px 10px;
 		}
